--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "node": "^18.20.1"
